# near-abi-client-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-plz.yml  test.yml
examples/delegator-generation/: Cargo.toml  build.rs
examples/delegator-generation/src/: adder.json  lib.rs
examples/delegator-generation/tests/: mod.rs
examples/delegator-macro/: Cargo.toml
examples/delegator-macro/src/: lib.rs
examples/delegator-macro/tests/: mod.rs
near-abi-client/: CHANGELOG.md  Cargo.toml
near-abi-client-impl/: CHANGELOG.md  Cargo.toml
near-abi-client-impl/src/: lib.rs
near-abi-client-macros/: CHANGELOG.md  Cargo.toml
near-abi-client-macros/src/: lib.rs
near-abi-client/src/: abi_core.rs  lib.rs
near-abi-client/src/private/: mod.rs
near-abi-client/tests/: adder.json  mod.rs
res/: adder.json
