[package]
name = "near-abi-client-impl"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/near/near-abi-client-rs"

[dependencies]
quote = "1.0"
anyhow = "1.0"
serde_json = "1.0"
proc-macro2 = "1.0"
schemafy_lib = { git = "https://github.com/near/schemafy", rev = "4fc8de1ef94f66db1f45889feebb9cf6b931dd94" }

near-sdk = { version = "4.1.0-pre.0", features = ["abi"] }
