[package]
name = "near-abi-client-impl"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/near/near-abi-client-rs"
description = """
Library to generate Rust clients for NEAR smart contracts.
"""

[dependencies]
quote = "1.0"
anyhow = "1.0"
schemars = "0.8"
serde_json = "1.0"
proc-macro2 = "1.0"
near_schemafy_lib = "0.7"

near-abi = "0.3.0"
