[package]
name = "near-abi-client-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/near/near-abi-client-rs"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.5"
near-abi-client = { path = "../near-abi-client" }
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
