[package]
name = "near-abi-client-macros"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/near/near-abi-client-rs"
description = """
Library to generate Rust clients for NEAR smart contracts.
"""

[lib]
proc-macro = true

[dependencies]
syn = "1.0"

near-abi-client-impl = { path = "../near-abi-client-impl", version = "0.1.1" }
