[package]
name = "near-abi-client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/near/near-abi-client-rs"

[dependencies]
syn = "1.0"
quote = "1.0"
anyhow = "1.0"
serde_json = "1.0"
proc-macro2 = "1.0"
convert_case = "0.5"
prettyplease = "0.1"
schemafy_lib = { git = "https://github.com/near/schemafy", rev = "4fc8de1ef94f66db1f45889feebb9cf6b931dd94" }
schemars = "0.8"

near-abi = "0.1.0-pre.0"
near-abi-client-macros = { path = "../near-abi-client-macros" }

[dev-dependencies]
tempdir = "0.3.7"
