[package]
name = "delegator-generation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
near-sdk = { version = "4.1.0-pre.0", features = ["abi"] }
near-abi-client-macros = { path = "../../near-abi-client-macros" }
serde_json = "1.0"
serde = "1.0"
tokio = { version = "1.14", features = ["full"] }
workspaces = "0.3.1"
